[package]
name = "portal"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "io-util", "net", "macros"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
